--- a/app/server/views/auth-success.html
+++ b/app/server/views/auth-success.html
@@ -3,7 +3,9 @@
 
 <head>
   <title>Authentication Successful</title>
-  <meta http-equiv="refresh" content="3;url=/">
+  <!--
+    <meta http-equiv="refresh" content="3;url=/">
+  -->
   <style>
     body {
       background-color: #f5f5f5;
@@ -54,6 +56,11 @@
     function goToHomepage() {
       window.location.href = "/";
     }
+
+    window.addEventListener("load", () => {
+      // let searchParam = new URLSearchParams(window.location.search);
+      setTimeout(() => window.location.href = '/?auth_success=true', 3000);
+    })
   </script>
 </body>
 
